Fix for navbar toggle on iphone Fix for buttons overlapping on iphone

--- a/airbitz/airbitz/static/css/global-stylesheet.css
+++ b/airbitz/airbitz/static/css/global-stylesheet.css
@@ -100,6 +100,7 @@
   display: none;
 }
 #nav-mobile .navbar-toggle {
+  margin-right: -5px;
   background: white;
 }
 #nav-mobile .navbar-toggle .icon-bar {
