--- a/airbitz/airbitz/static/less/navbar.less
+++ b/airbitz/airbitz/static/less/navbar.less
@@ -158,6 +158,7 @@
     }
 
     .navbar-toggle {
+        margin-right: -5px;
         background: white;
 
         .icon-bar {
